--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ body {
                         <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
                     <b>Currently Focused On</b>
-                    <p></p>
-                    <p>Python and Django</p>
+                    <p>Learning React</p>
+                    <p>Learning Python and Django</p>                  
                     <p>Finding A Job with Nice Pay & Good Project &#128521;</p>
                     <hr>
                     <!-- Languages -->
@@ -139,13 +139,14 @@ body {
                 <div class="well">
                     <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2>
                     <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Working On a RWD Prototype for Django Powered Website [WEBSITE I Under Construction]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Working On A Makeup Website for Spouse [WEBSITE II Under Construction]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS [WEBSITE III]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> RWD Prototype Website for Django [WEBSITE I Under Construction]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Makeup Website for Spouse [WEBSITE II Under Construction]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Linux Chats Website(Wordpress as CMS) [WEBSITE III]</a><br>
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research - How To Startup Best HTML&CSS Coding [PDF Download] </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Quick summary of Github</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> Codepen.io Account</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Web Version of Resume </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://www.facebook.com/snrphotos/" target="_blank" style="color:black"> Yes, I do photography as a hobby!</a><br><br>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
