--- a/index2.html
+++ b/index2.html
@@ -243,7 +243,7 @@
                     <header>
                         <h1>Sachin R.</h1>
                         <h1>sachink.rb@gmail.com</h1>
-                        <h2>myGoal => { "To learn at least one cool thing everyday" }<br> Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
+                        <h2>myCurrentGoal => { "To research and learn a little bit of coding everyday" }<br> Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
                         <h4></h4>
                     </header>
                     <div class="resume-frame-2">
@@ -316,7 +316,7 @@
                                 <h2>Operating System Explored</h2>
                                 <ul>
                                     <li>Ubuntu/CentOS</li>
-                                    <li>macOS, OS X & iOS</li>
+                                    <li>macOS</li>
                                     <li>Windows</li>
                                 </ul>
                             </div>
@@ -332,7 +332,7 @@
                                 </div>
                                 <ul>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github Powered Portfolio Website (sachinkrb.github.io)</a></li>
-                                    <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Quick summary of Github Account</a></li>
+                                    <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Quick summary of Github Account</a></li>
                                     <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">RWD Prototype for Django Project (Current) </a></li>
                                     <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Makeup Website for Spouse (Current) </a></li>
                                     <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website (Wordpress as CMS, linuxchats.com)</a></li>
