--- a/index2.html
+++ b/index2.html
@@ -238,7 +238,7 @@
                         <a href="https://github.com/sachinkrb">MY GITHUB</a>
                     </div>
                 </div>
-                <!-- <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span> -->
+                <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span>
                 <div class="resume-frame-1">
                     <header>
                         <h1>Sachin R.</h1>
