--- a/index2.html
+++ b/index2.html
@@ -353,11 +353,12 @@
                             <article>
                                 <hgroup>
                                     <h1>Independent Contractor at LiveOps, Work At Home</h1>
-                                    <p>July 2019 – Current</p>
+                                    <p>August 2019 – Current</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Working as an independent customer service contractor for different retail and non-retail clients.</li>
-                                    <li>Resolving products and accounts issues.</li>
+                                    <li>Working as an independent customer service contractor for L Brands.</li>
+                                    <li>Resolving post sales and accounts issues.</li>
+                                    <li>Help customers order on behalf of L Brands</li>
                                 </ul>
                             </article>
                             <article>
@@ -367,15 +368,10 @@
                                 </hgroup>
                                 <ul>
                                     <li>Professionally handled software and hardware issues calls regarding Apple products such as Mac, iPhone, iPad, iPod and other apple accessories.troubleshooting skills.</li>
-                                    <li>Dug in-depth for system folders to find the root cause of the issue, followed internal apple documents and verified google searches to solve the performance and other issues.</li>
-                                    <li>Used soft-skills and right set of questions to get to the main cause of the issue.</li>
-                                    <li>Requested screen-sharing sessions on iOS and Mac devices while assuring solution and maintained privacy for the customer.</li>
+                                    <li>Dug in-depth for system folders to find the root cause of the issue, followed internal apple documents and verified Google searches to solve the performance and other issues.</li>
                                     <li>Isolated & categorized issues to keep proper written logs of software and hardware issues.</li>
                                     <li>Setup repair appointment for hardware related issues.</li>
-                                    <li>Studied and reported arising software and hardware issues with Apple products.</li>
                                     <li>Worked on new bugs generated with every software updates and freshly launched Apple products.</li>
-                                    <li>Maintained proper access to consumers apple id, iCloud account and private information.</li>
-                                    <li>Received numerous completely satisfied surveys(goals achieved up-to 100%) and kudos from numerous apple consumers.</li>
                                 </ul>
                             </article>
                             <article>
@@ -387,13 +383,11 @@
                                     <li>Worked under scrum concepts of agile methodology by attending scrum calls for tasks iterations, tasks reporting and final product demos.</li>
                                     <li>Worked with Spring open source framework for improving existing web application as well as creating attractive graphical user interface based on old and new prototypes.</li>
                                     <li>Created SQL queries and implemented functions to work with the DB2 database servers.</li>
-                                    <li>etched , manipulated and executed SQL queries to check for database errors and corrected the logic and data as required for each task.</li>
+                                    <li>Fetched , manipulated and executed SQL queries to check for database errors and corrected the logic and data as required for each task.</li>
                                     <li>Ran software security assurance tool on new files to check for security vulnerabilities.</li>
                                     <li>Worked on User interface system using HTML5, CSS3, JavaScript, jQuery, AngularJS, JSP, JSTL and Bootstrap.</li>
                                     <li>Went through several meetings on how to properly code and execute kornshell(ksh) for batch jobs.</li>
                                     <li>Installed and build the web application using Maven to deploy and test out the job in various test and stage servers.</li>
-                                    <li>Developed the application using Eclipse as the IDE and used features for editing, debugging, compiling, formatting, test cases, and installed Subclipse plugin for version control (SVN).</li>
-                                    <li>Properly exported and committed the changes in code by setting up several meetings with fellow developers to avoid conflicts.</li>
                                     <li>Took care of defects opened by QA within the given time frame. </li>
                                 </ul>
                             </article>
