--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
                         <center><a href="index2.html" class="btn btn-success btn-block" role="button">Web Resume - Click Here</a></center>
                     </p>
                     <p>
-                        <center><a href="skeleton-test/index.html" class="btn btn-success btn-block" role="button">Reminders Lists - Click Here</a></center>
+                        <center><a href="skeleton-test/index.html" class="btn btn-success btn-block" role="button">Reminder Links - Click Here</a></center>
                     </p>
                     <h3>Sachin Rajbhandari</h3>
                     <span class="fa-stack">
@@ -79,7 +79,7 @@ body {
                             60% Complete
                         </div>
                     </div>
-                    <p>PHP, SQL</p>
+                    <p>Java, Python, Django, PHP, PostgreSQL</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:55%">
                             55% Complete
@@ -116,8 +116,7 @@ body {
                         <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
                     <b>Currently Focused On</b>
-                    <p>Learning React</p>
-                    <p>Learning Python and Django</p>                  
+                    <p>Full Stack Course - App Academy Bootcamp</p>                  
                     <p>Finding A Job with Nice Pay & Good Project &#128521;</p>
                     <hr>
                     <!-- Languages -->
@@ -139,20 +138,20 @@ body {
                 <div class="well">
                     <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2>
                     <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> RWD Prototype Website for Django [WEBSITE I Under Construction]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Makeup Website for Spouse [WEBSITE II Under Construction]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Linux Chats Website(Wordpress as CMS) [WEBSITE III]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research - How To Startup Best HTML&CSS Coding [PDF Download] </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Quick summary of Github</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black">  Prototype for Django(RWD) [WEBSITE I]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Makeup Page for Spouse(RWD) [WEBSITE II]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Linux Chats(Wordpress as CMS) [WEBSITE III]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research - My Theory of Coding HTML & CSS [PDF Download] </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github Account</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Quick Summary of Github</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> Codepen.io Account</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Web Version of Resume </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://www.facebook.com/snrphotos/" target="_blank" style="color:black"> Yes, I do photography as a hobby!</a><br><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> HTML/CSS Version of Resume </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Yes, I do Photography as a Hobby!</a><br><br>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
-                    <p>Working as an independent customer service contractor for different retail and non-retail clients.</p>
+                    <p>Working as an independent customer service contractor for Bath & Body Works with sales/account/post-sales issues</p>
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> Jul 2017 - June 2019</span></h6>
@@ -160,11 +159,11 @@ body {
                     <hr>
                     <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
                     <h6><i class="fa fa-calendar "></i> <span> Feb 2017 - May 2017</span></h6>
-                    <p>Worked under agile methodology on redesigning old website while waiting on a new project to arrive and work. Grabbed knowledge about real web development tasks, recreated assigned pages, tested SQL queries and worked with QA team. Learned about Spring framework, Stage/Production server & other web development/deployment tools. </p>
+                    <p>Worked under agile methodology on redesigning old website. Grabbed knowledge about real web development tasks, recreated assigned pages, tested SQL queries and worked with QA team. Learned about Spring framework, Stage/Production server & other web development/deployment tools. </p>
                     <hr>
                     <h5><b>Support.com - Remote Services Technician - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i> Dec 2015 - Jan 2017</h6>
-                    <p>Worked on setting up and troubleshooting comcast gateways. Studied signal level to find RF issues and schedule repair technician if needed.</p>
+                    <p>Worked on setting up and troubleshooting Comcast gateways. Studied signal level to find RF issues and schedule repair technician if needed.</p>
                     <hr>
                     <h5><b>Academic Computer Center - University IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
