--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@ body {
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
-                    <b>Currently Focused On</b>
+                    <b>Currently Status</b>
+                    <p></p>
                     <p>Full Stack Course - App Academy Bootcamp</p>                  
-                    <p>Finding A Job with Nice Pay & Good Project &#128521;</p>
+                    <p>Targeting A Job with Good Project & Nice Pay &#128521;</p>
                     <hr>
                     <!-- Languages -->
                     <span class="fa-stack">
@@ -151,7 +152,7 @@ body {
                     <hr>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
-                    <p>Working as an independent customer service contractor for Bath & Body Works with sales/account/post-sales issues</p>
+                    <p>Working as an independent customer service contractor for Bath & Body Works with sales/account/post-sales issues.</p>
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> Jul 2017 - June 2019</span></h6>
