--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@ body {
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-cog fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
+                    <!-- Currently Focused On -->
+                    <span class="fa-stack">
+                        <i class="fa fa-circle-thin fa-stack-2x"></i>
+                        <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
+                    </span>
+                    <b>Current Status</b>
+                    <p></p>
+                    <p>Full Stack Course - App Academy BOOTCAMP</p>                  
+                    <p>Targeting A Job with Good Project & Nice Pay &#128521;</p>
+                    <hr><hr>
                     <b>My Skills</b>
                     <p></p>
                     <p>HTML, CSS, JavaScript </p>
@@ -110,16 +120,7 @@ body {
                         </div>
                     </div>
                     <hr><hr>
-                    <!-- Currently Focused On -->
-                    <span class="fa-stack">
-                        <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
-                    </span>
-                    <b>Currently Status</b>
-                    <p></p>
-                    <p>Full Stack Course - App Academy Bootcamp</p>                  
-                    <p>Targeting A Job with Good Project & Nice Pay &#128521;</p>
-                    <hr>
+                    
                     <!-- Languages -->
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
