--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
                     </span>
                     <b>My Skills</b>
                     <p></p>
-                    <p>HTML, CSS, JavaScript </p>
+                    <p>HTML, CSS, Javascript </p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                             80% Complete
