--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ body {
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black">  Prototype for Django(RWD) [WEBSITE I]</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Makeup Page for Spouse(RWD) [WEBSITE II]</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Linux Chats(Wordpress as CMS) [WEBSITE III]</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Collections/Reminders</a><br>
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research - My Theory of Coding HTML & CSS [PDF Download] </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github Account</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Quick Summary of Github</a><br>
