--- a/index2.html
+++ b/index2.html
@@ -250,16 +250,16 @@
                         <section class="resume-frame-3">
                             <h1>[ Highlighted Skills ]</h1>
                             <div>
-                                <h2>Favorite Things</h2>
+                                <h2>Good Knowledge On: </h2>
                                 <ul>
                                     <li>HTML</li>
                                     <li>CSS</li>
                                     <li>JavaScript</li>
+                                    <li>PHP</li>
                                     <li>PostgreSQL</li>
                                     <li>BootStrap</li> 
                                     <li>React</li>
                                     <li>Django</li>
-                                    <li>PHP</li>
                                     <li>WAMP & XAMPP</li>
                                     <li>Git & GitHub</li>
                                     <li>Lightroom & Photoshop</li>
@@ -305,8 +305,6 @@
                                     <li>Sublime Text</li>
                                     <li>Eclipse</li>
                                     <li>Firefox, Chrome Dev Tools</li>
-                                    <li>Putty</li>
-                                    <li>FileZilla</li>
                                     <li>Packet Tracer</li>
                                     <li>Photography</li>
                                 </ul>
