--- a/index2.html
+++ b/index2.html
@@ -331,17 +331,16 @@
                                 <ul>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github Powered Portfolio Website (sachinkrb.github.io)</a></li>
                                     <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Quick summary of Github Account</a></li>
-                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">RWD Prototype for Django Project (Current) </a></li>
-                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Makeup Website for Spouse (Current) </a></li>
-                                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website (Wordpress as CMS, linuxchats.com)</a></li>
-                                    <li><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research-How To Start Best HTML&CSS Coding </a></li>
-                                    <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects (github.com/sachinkrb)</a></li>
-                                    <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Reminder Lists For Creations </a></li>
-                                    <li><a href="#" style="color:black"> Django Powered Website Coming Soon!</a></li>
+                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Prototype Website for Django(RWD)</a></li>
+                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Makeup Website for Spouse(RWD)</a></li>
+                                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website (Wordpress as CMS, Theme Based)</a></li>
+                                    <li><a style=" color: black;" href="howtohtmlcss.pdf" download> How To Start Best HTML/CSS Coding </a></li>
+                                    <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects</a></li>
+                                    <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Reminders/Web Collections</a></li>
                                     <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Account</a></li>
                                     <li><a href="https://repl.it/@CiscoTest" target="_blank" style="color:black">Repl.it Account</a></li>
                                     <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Sololearn Account</a></li>
-                                    <li><a href="https://www.facebook.com/snrphotos/" target="_blank" style="color: black">Yes, I do photography as a hobby!</a></li>
+                                    <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color: black">Yes, I do Photography as a Hobby!</a></li>
 
                                 </ul>
                             </article>
@@ -354,9 +353,9 @@
                                     <p>August 2019 – Current</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Working as an independent customer service contractor for L Brands.</li>
-                                    <li>Resolving post sales and accounts issues.</li>
-                                    <li>Help customers order on behalf of L Brands</li>
+                                    <li>Working as an independent customer service contractor for Bath & Body Works.</li>
+                                    <li>Resolving post sales/accounts/post-sales issues.</li>
+                                    <li>Help customers order products on behalf of Bath & Body Works</li>
                                 </ul>
                             </article>
                             <article>
@@ -365,27 +364,24 @@
                                     <p>July 2017 – June 2019</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Professionally handled software and hardware issues calls regarding Apple products such as Mac, iPhone, iPad, iPod and other apple accessories.troubleshooting skills.</li>
-                                    <li>Dug in-depth for system folders to find the root cause of the issue, followed internal apple documents and verified Google searches to solve the performance and other issues.</li>
+                                    <li>Professionally handled software/hardware issues calls regarding Apple products such as Mac, iPhone, iPad, iPod and other apple accessories.</li>
+                                    <li>Dug in-depth for system folders to find the root cause of the issue, followed internal apple documents and verified Google searches to solve the issues.</li>
                                     <li>Isolated & categorized issues to keep proper written logs of software and hardware issues.</li>
                                     <li>Setup repair appointment for hardware related issues.</li>
-                                    <li>Worked on new bugs generated with every software updates and freshly launched Apple products.</li>
+                                    <li>Worked on reporting new bugs generated with every software updates.</li>
                                 </ul>
                             </article>
                             <article>
                                 <hgroup>
-                                    <h1>Web Developer at United Health Group, Short-Term Contract Hire</h1>
+                                    <h1>Web Developer at United Health Group, Short-Term Contractor</h1>
                                     <p>February 2017 – May 2017</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Worked under scrum concepts of agile methodology by attending scrum calls for tasks iterations, tasks reporting and final product demos.</li>
-                                    <li>Worked with Spring open source framework for improving existing web application as well as creating attractive graphical user interface based on old and new prototypes.</li>
-                                    <li>Created SQL queries and implemented functions to work with the DB2 database servers.</li>
-                                    <li>Fetched , manipulated and executed SQL queries to check for database errors and corrected the logic and data as required for each task.</li>
-                                    <li>Ran software security assurance tool on new files to check for security vulnerabilities.</li>
-                                    <li>Worked on User interface system using HTML5, CSS3, JavaScript, jQuery, AngularJS, JSP, JSTL and Bootstrap.</li>
-                                    <li>Went through several meetings on how to properly code and execute kornshell(ksh) for batch jobs.</li>
-                                    <li>Installed and build the web application using Maven to deploy and test out the job in various test and stage servers.</li>
+                                    <li>Worked under agile methodology by attending scrum calls for tasks iterations, tasks reporting and final product demos.</li>
+                                    <li>Worked on building UIs using multiple languages but not limited to HTML5, CSS3, JavaScript, Spring, jQuery, AngularJS, JSP, JSTL and Bootstrap.</li>
+                                    <li>Implemented SQL queries to work with the DB2 database servers.</li>
+                                    <li>Ran software security assurance tool on codes to check for security vulnerabilities.</li>
+                                    <li>Learned about Spring framework, korn shell, Stage/Production server & other web development/deployment tools.</li>
                                     <li>Took care of defects opened by QA within the given time frame. </li>
                                 </ul>
                             </article>
@@ -398,7 +394,7 @@
                                     <li>Professionally handled calls passed on by tiers associated with Comcast customers Internet issues.</li>
                                     <li>Studied Signal levels in details to look for RF issues and scheduled a technician if needed to correct the reported issue.</li>
                                     <li>Logged into customers routers and modems remotely to troubleshoot and manipulate the settings as well as read logs to determine the health of those devices.</li>
-                                    <li>Ran proximity checks to determine outages and isolates intermittent Internet issues.</li>
+                                    <li>Ran proximity checks to determine outages and isolated intermittent Internet issues.</li>
                                 </ul>
                             </article>
                             <article>
@@ -412,7 +408,6 @@
                                     <li>Assisted in removing old hardware parts to upgrade and test old hardwares.</li>
                                     <li>Assisted students in working with various softwares, including removal and installation of windows and third party softwares.</li>
                                     <li>Maintained proper security access to classroom labs.</li>
-                                    <li>Communicated in professional manners about the unnoticed hardware, software and security issues to IT leads.</li>
                                     <li>Assisted in configuring LANs and WLANs in multiple buildings on campus.</li>
                                 </ul>
                             </article>
