--- a/index2.html
+++ b/index2.html
@@ -243,7 +243,7 @@
                     <header>
                         <h1>Sachin R.</h1>
                         <h1>sachink.rb@gmail.com</h1>
-                        <h2>myCurrentGoal => { "To research and learn a little bit of coding everyday" }<br> Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
+                        <h2>Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
                         <h4></h4>
                     </header>
                     <div class="resume-frame-2">
