--- a/index2.html
+++ b/index2.html
@@ -232,7 +232,7 @@
                         <a href="https://sachinkrb.github.io/">HOME</a>
                         <a href="https://sachinkrb.github.io/skeleton-test/index.html">COLLECTIONS/LINKS</a>
                         <a href="https://sachinkrb.github.io/index3.html">CREATING PROTOTYPE FOR DJANGO PROJECT</a>
-                        <a href="Sachin's Resume.pdf" download>DOWNLOAD PDF VERSION</a>
+                        <a href="SachinsResume.pdf" download>DOWNLOAD PDF VERSION</a>
                         <a href="#" onclick="viewSource()">VIEW PAGE SOURCE</a>
                         <a href="https://linuxchats.com">WORDPRESS PROJECT</a>
                         <a href="https://github.com/sachinkrb">MY GITHUB</a>
